# HitmanAbsolutionSDK

./: CMakeLists.txt  README.md
HitmanAbsolutionSDK/include/Glacier/UI/: EHUDItem.h
Mods/HUDPersist/: CMakeLists.txt
Mods/HUDPersist/include/: HUDPersist.h
Mods/HUDPersist/src/: HUDPersist.cpp
Mods/LevelTimer/: CMakeLists.txt
Mods/LevelTimer/include/: LevelTimer.h
Mods/LevelTimer/src/: LevelTimer.cpp
